[package]
name = "hello_macro_test"
version = "0.1.0"
edition = "2024"

#cargo add hello_macro --path ../hello_macro --features hello_macro_derive
[dependencies]
hello_macro = { version = "0.1.0", path = "../hello_macro", features = ["hello_macro_derive"] }
hello_macro_derive = { version = "0.1.0", path = "../hello_macro/hello_macro_derive" }
